gateway-service/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: amozgov/gateway-service:6ebcacae12b50afeaa9d9d6fb92438dc740e72d5
          ports:
            - containerPort: 5000 # Add the port if your app listens on one
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          # livenessProbe:
          #   httpGet:
          #     path: /healthz
          #     port: 5000
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     path: /ready
          #     port: 5000
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
